<?xml version="1.0"?>

<!-- This file is only used to enable building Livox-SDK -->
<!-- as a debian package for use with ROS (http://ros.org) -->
<!-- via catkin_make (which invokes cmake) -->

<package format="2">
  <name>livox-sdk</name>
  <!-- The version tag needs to be updated with each new release of librealsense -->
  <version>2.3.0</version>
  <description>
  Livox SDK is the software development kit designed for all Livox products. It is developed based on C/C++ following Livox SDK Communication Protocol, and provides easy-to-use C style API. With Livox SDK, users can quickly connect to Livox products and receive point cloud data. Livox SDK consists of Livox SDK communication protocol, Livox SDK core, Livox SDK API, Linux sample, and ROS demo.
  </description>

  <maintainer email="developers@greenzie.com">Greenzie Developers</maintainer>

  <url type="website">https://github.com/Livox-SDK/Livox-SDK</url>

  <author email="cs@livoxtech.com">Livox-SDK</author>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
